--- a/.gitignore
+++ b/.gitignore
@@ -78,8 +78,15 @@ publish
 # Publish Web Output
 *.Publish.xml
 
-# NuGet Packages Directory
-packages
+#Nuget packages
+/src/packages/**/
+!/src/packages/repositories.config
+publish*
+packer*
+Misc*
+NugetServerPublish*
+Nuget.Server*
+nuget*/
 
 # Windows Azure Build Output
 csx
